k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${NAME_DEPLOYMENT}
  labels:
    app: ${APP_LABEL}
  namespace: ${NAMESPACE_PROJECT}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${APP_LABEL}
  template:
    metadata:
      labels:
        app: ${APP_LABEL}
    spec:
      containers:
        - name: ${NAMESERVICE_CONTAINER}
          image: ${USER_DOCKER_HUB}/${REPOSITORY}:26
          ports:
            - containerPort: 120
          volumeMounts:
            - mountPath: /run/src/main/resources/application.properties
              name: application-properties-config-volume
              subPath: application.properties
      volumes:
        - name: application-properties-config-volume
          configMap:
            name: orderservice-backend-application-properties-configmap
