k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orderservice-be-service
  namespace: backend
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: tcp
      port: 80
      protocol: TCP
      targetPort: 8083
  selector:
    app: orderservice-be
  sessionAffinity: None
  type: ClusterIP
